# apple-silicon-p99

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  Setup.command  mkdocs.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docs-dev.yml  release.yml  semantic-release.yml
0.5/: 404.html  index.html  sitemap.xml
0.5/FAQ/: index.html
0.5/HOW-IT-WORKS/: index.html
0.5/PERFORMANCE/: index.html
0.5/TROUBLESHOOTING/: index.html
0.5/WHAT-WE-CHANGE/: index.html
0.5/changelog/: index.html
0.5/search/: search_index.json
0.6/: 404.html  index.html  sitemap.xml
0.6/EXPERIMENTAL-FEX/: index.html
0.6/FAQ/: index.html
0.6/HOW-IT-WORKS/: index.html
0.6/PERFORMANCE/: index.html
0.6/TROUBLESHOOTING/: index.html
0.6/WHAT-WE-CHANGE/: index.html
0.6/changelog/: index.html
0.6/search/: search_index.json
0.7/: 404.html  index.html  sitemap.xml
0.7/EXPERIMENTAL-FEX/: index.html
0.7/FAQ/: index.html
0.7/HOW-IT-WORKS/: index.html
0.7/PERFORMANCE/: index.html
0.7/TROUBLESHOOTING/: index.html
0.7/WHAT-WE-CHANGE/: index.html
0.8/: 404.html  index.html  sitemap.xml
app/: Package.swift
dev/: 404.html  index.html  sitemap.xml
docs/: EXPERIMENTAL-FEX.md  FAQ.md  HOW-IT-WORKS.md  PERFORMANCE.md  TROUBLESHOOTING.md  WHAT-WE-CHANGE.md  changelog.md  index.md
scripts/: 00-prereqs.sh  10-build-wrapper.sh  15-install-from-media.sh  20-install-game.sh  30-apply-mac-fixes.sh  35-perf-ini.sh  40-launch.sh  50-update.sh  55-wrapper.sh  60-renderer.sh  65-wined3d.sh  70-stack.sh  75-fex-smoke.sh  90-uninstall.sh  95-selfupdate.sh  config.sh  status.sh  tests.sh
tools/: check_conventional_commits.py
(+57 files in other folders)
